Cleanup recipe codecs